<?xml version="1.0" encoding="utf-8"?>


<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context=".ActivityC">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            tools:context=".ActivityC">

        <ImageView android:layout_width="200dp" android:layout_height="200dp"
                   app:srcCompat="@drawable/dp_img"
                   app:layout_constraintEnd_toEndOf="parent"
                   android:layout_marginEnd="8dp"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginStart="8dp"
                   android:layout_marginTop="32dp"
                   android:scaleType="centerCrop"
                   android:id="@+id/avatar"
                   app:layout_constraintTop_toTopOf="parent"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/my_name"
                  android:id="@+id/name"
                  android:fontFamily="@font/lobster"
                  android:textSize="32sp"
                  app:layout_constraintTop_toBottomOf="@id/avatar"
                  android:layout_marginEnd="8dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="8dp"
                  android:layout_marginTop="16dp"/>

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              app:layout_constraintTop_toBottomOf="@+id/name"
              android:layout_marginTop="8dp"
              android:background="@color/black"
              android:id="@+id/divider"
        />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/track"
                  android:text="@string/track_text"
                  android:textSize="18sp"
                  app:layout_constraintTop_toBottomOf="@+id/divider"
                  android:layout_marginTop="16dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/country"
                  android:text="@string/country_text"
                  android:textSize="18sp"
                  app:layout_constraintTop_toBottomOf="@+id/track"
                  android:layout_marginTop="8dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/email"
                  android:text="@string/email_text"
                  android:textSize="18sp"
                  app:layout_constraintTop_toBottomOf="@+id/country"
                  android:layout_marginTop="8dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/phone"
                  android:text="@string/phone_text"
                  android:textSize="18sp"
                  app:layout_constraintTop_toBottomOf="@+id/email"
                  android:layout_marginTop="8dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/slack_username"
                  android:text="@string/slack_text"
                  android:textSize="18sp"
                  app:layout_constraintTop_toBottomOf="@+id/phone"
                  android:layout_marginTop="8dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>