<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/grey"
        tools:context=".ActivityA">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginTop="16dp"
              android:textAlignment="center"
              android:textSize="30sp"
              android:textColor="@color/black"
              android:text="@string/app_title"
              app:layout_constraintTop_toTopOf="parent"
              android:id="@+id/textView"
              android:fontFamily="@font/lobster"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:id="@+id/btnToActivityB"
            android:textColor="@color/black"
            android:text="@string/about_alc"
            android:textSize="20sp"
            android:fontFamily="@font/pt_sans"
            android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.AppCompat.Button.Colored"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/btnToActivityC"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/pt_sans"
            android:text="@string/my_profile"
            android:textStyle="bold|italic"
            app:layout_constraintTop_toBottomOf="@+id/btnToActivityB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.AppCompat.Button.Colored"/>

</androidx.constraintlayout.widget.ConstraintLayout>